--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,43 @@
 /* width 1320px
 양쪽패딩 20px 
 실제 컨텐츠 넓이 1280px*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;800&family=Poppins:wght@400;500;600&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+body {
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: #111;
+}
+.container {
+}
+.inner {
+  width: 1320px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.header {
+  height: 120px;
+}
+.header li a {
+  height: 120px;
+}
+.nav {
+  display: flex;
+}
+.top_menu {
+  display: flex;
+}
