--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,20 @@ a {
   text-decoration: none;
   color: inherit;
 }
+.btn {
+  width: 256px;
+  height: 64px;
+  border: 1px solid #111;
+  background-color: #fff;
+  color: #111;
+  text-align: center;
+  line-height: 64px;
+  font-size: 18px;
+}
+.btn_dark {
+  background-color: #111;
+  color: #fff;
+}
 body {
   /* font-family: 'Montserrat', sans-serif; */
   font-family: "Poppins", sans-serif;
@@ -32,12 +46,53 @@ body {
 .header {
   height: 120px;
 }
+
+.header .inner {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
 .header li a {
   height: 120px;
+  display: inline-block;
+  line-height: 120px;
 }
+
 .nav {
   display: flex;
 }
+
+.nav li a {
+  margin-right: 30px;
+}
+
 .top_menu {
   display: flex;
+}
+
+.top_menu li a {
+  margin-left: 40px;
+}
+
+.logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* hero */
+.slide {
+  position: relative;
+  width: 1280px;
+  height: 728px;
+  margin: 0 auto;
+  background: url(/images/main_visual\ 2.png);
+  background-repeat: no-repeat;
+  background-position: center right;
+}
+.slide .text_box {
+  position: absolute;
+  bottom: 100px;
+  left: 0;
 }
